# awsso

./: .gitignore  Cargo.toml  LICENSE  README.md  awssso  go.mod  go.sum  package.json  tsconfig.json
cmd/awsso/: awsso.go
lib/: aws-sso.ts  aws.ts  cli.ts  logger.ts
pkg/cli/creds/: creds.go
pkg/cli/profiles/: profiles.go
pkg/printer/: printer.go
src/: aws.rs  main.rs
