[package]
name = "awsso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.0.0"
aws-sdk-sso = "0.39.0"
chrono = "0.4.31"
clap = "4.4.8"
home = "0.5.5"
rust-ini = "0.20.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha1_smol = "1.0.0"
tokio = { version = "1.34.0", features = ["full"] }
